# portfolio

./: .gitignore  README.md  package-lock.json  package.json  tree.json  vercel.json
api/: chat.js
content/: README.md
content/newsletters/: 2026-03-20-alphasignal-cursor-composer-2-cuts-coding-costs-50-with-multi-file-workflows.json  2026-03-20-alphasignal-google-stitch-voice-ui-builds-apps-from-prompts-minimax-m2-7-self-t.json  2026-03-20-evolving-ai-insights-what-81000-people-really-want-from-ai.json  2026-03-22-alphasignal-nvidia-s-nemotron-3-cuts-ai-agent-costs-with-120b-moe-model.json  2026-03-22-interconnects-by-nathan-lambert-lossy-self-improvement.json  2026-03-25-towards-data-science-tds-daily-march-25.json  (+96 more)
knowledge/: 01-intro.md  02-farmwise.md  03-prev-roles.md  04-side-projects.md  05-stack.md  06-background.md  07-personality.md
lib/: answerer.js  build-index.js  build-newsletters.js  ratelimit.js  router.js  sse.js  tree.js
public/: index.html  styles.css
scripts/: build-index.mjs  build-newsletters.mjs  fix-snippets.mjs  smoke-chat.mjs
tests/: answerer.test.js  build-index.test.js  build-newsletters.test.js  ratelimit.test.js  router.test.js  sse.test.js  tree.test.js
tools/newsletter-sync/: .env.example  .gitignore  README.md  pyproject.toml
tools/newsletter-sync/app/: __init__.py  config.py  gmail.py  main.py  oauth.py  sanitize.py  senders.py  writer.py
tools/newsletter-sync/app/templates/: base.html  dashboard.html  senders.html
tools/newsletter-sync/tests/: test_gmail.py  test_sanitize.py  test_senders.py  test_writer.py
(+75 files in other folders)
