[project]
name = "newsletter-sync"
version = "0.1.0"
description = "Local-only Gmail → portfolio newsletter sync tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "google-auth>=2.28",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.120",
  "beautifulsoup4>=4.12",
  "lxml>=5.1",
  "python-slugify>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
